context for ff details page overview card and style changes in common content component

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -25,7 +25,7 @@
 
   <!-- content -->
   <ng-container content *ngIf="isSectionCardExpanded">
-    <div style="background-color: beige; height: 90px; width: 100%">content: Details Overview</div>
+    <app-common-section-card-content class="full-width" [data]="flagOverviewDetails"></app-common-section-card-content>
   </ng-container>
 
   <!-- footer -->
