--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-content/common-section-card-content.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-content/common-section-card-content.component.html
@@ -1,14 +1,14 @@
 <div class="content-section">
-  <div *ngFor="let obj of data">
-    <div *ngFor="let item of obj | keyvalue">
-      <span style="font-weight: bold">{{ item.key }}:</span>
-      <ng-container *ngIf="item.key !== 'tags'; else chipSection">
-        <span>{{ item.value }}</span>
+  <div *ngFor="let item of dataSource">
+    <div class='item-key-value'>
+      <span class="ft-16-600 item-key">{{ item.key }}:</span>
+      <ng-container *ngIf="item.key !== 'Tags'; else chipSection">
+        <span class="ft-16-500 item-value">{{ item.value }}</span>
       </ng-container>
 
       <ng-template #chipSection>
         <mat-chip-list>
-          <mat-chip *ngFor="let tag of item.value">{{ tag }}</mat-chip>
+          <mat-chip *ngFor="let tag of item.value" class="chip">{{ tag }}</mat-chip>
         </mat-chip-list>
       </ng-template>
     </div>
