--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
@@ -20,7 +20,7 @@
     align-items: center;
     width: 100%;
     min-height: 10px;
-    padding: 0 32px;
+    padding: 16px 32px 20px;
   }
 
   .footer {
