--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-container">
+<div class="add-feature-flag-modal-container">
   <app-common-dialog
     [title]="config.title"
     [cancelBtnLabel]="config.cancelBtnLabel"
