--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.scss
@@ -1,4 +1,4 @@
-:host ::ng-deep .modal-container {
+:host ::ng-deep .add-feature-flag-modal-container {
   display: flex;
   flex-direction: column;
   align-items: space-between;
