FF details fetched on refresh/url hit. Added spinner on loading detail. Removed some necessary code

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page.component.html
@@ -1,4 +1,4 @@
-<app-common-page>
+<app-common-page class="app-common-page">
   <app-feature-flag-details-page-header header></app-feature-flag-details-page-header>
   <app-feature-flag-details-page-content content></app-feature-flag-details-page-content>
 </app-common-page>
