--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
@@ -3,7 +3,7 @@
   border: 1px solid var(--light-grey);
   border-radius: 4px;
   background-color: var(--white);
-
+  overflow: hidden;
   .header {
     height: 96px;
     display: flex;
