--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
@@ -1,10 +1,26 @@
 <app-common-section-card>
+  <!-- header-left -->
   <app-common-section-card-title-header
-  header-left
-  [title]="'feature-flags.details.exclusions.card.title.text' | translate"
-  [subtitle]="'feature-flags.details.exclusions.card.subtitle.text' | translate"
-  [tableRowCount]="tableRowCount$ | async"
-></app-common-section-card-title-header>
-  <div header-right style="background-color: lightskyblue; height: 90px; width: 100%">header-right</div>
+    header-left
+    [title]="'feature-flags.details.exclusions.card.title.text' | translate"
+    [subtitle]="'feature-flags.details.exclusions.card.subtitle.text' | translate"
+    [tableRowCount]="tableRowCount$ | async"
+  ></app-common-section-card-title-header>
+
+  <!-- header-right -->
+  <app-common-section-card-action-buttons
+    header-right
+    [showPrimaryButton]="true"
+    [primaryButtonText]="'feature-flags.details.add-exclude-list.button.text' | translate"
+    [showMenuButton]="true"
+    [menuButtonItems]="menuButtonItems"
+    [isSectionCardExpanded]="isSectionCardExpanded"
+    (primaryButtonClick)="addExcludeListClicked()"
+    (menuButtonItemClick)="onMenuButtonItemClick($event)"
+    (sectionCardExpandChange)="onSectionCardExpandChange($event)"
+  >
+  </app-common-section-card-action-buttons>
+
+  <!-- content -->
   <div content style="background-color: lightskyblue; height: 90px; width: 100%">content: Exclusions</div>
 </app-common-section-card>
