search widget intregration with feature flag root table (#1589)
* search widget intergration with feature flag root table

* addressed review cmts

* code changes to avoid merge conflit

* generalized table search functions and observable usage refactor

* filter by property in definePredicate

* refactor for table service and managing combined observables

* use string instead of enum type due to how weird typescript enums are

* change search params interface to string also

* fix type mismatch

* renamed functions, fixed error with ALL filter

* restore flag key type

---------

Co-authored-by: danoswaltCL <doswalt@carnegielearning.com>
Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -2,9 +2,9 @@
   <!-- header-left -->
   <app-common-section-card-search-header
     header-left
-    [filterOptions]="['All', 'Name', 'Status', 'Context']"
-    [initialFilterOption]="'All'"
-    [initialSearchValue]=""
+    [filterOptions]="featureFlagFilterOption"
+    [searchKey]="searchKey$ | async"
+    [searchString]="searchString$ | async"
     (search)="onSearch($event)"
   ></app-common-section-card-search-header>
 
@@ -27,9 +27,9 @@
     </ng-container>
 
     <ng-template #table>
-      <app-feature-flag-root-section-card-table
+      <app-feature-flag-root-section-card-table 
         class="full-width"
-        [dataSource$]="allFeatureFlags$"
+        [dataSource$]="dataSource$ | async"
         [isLoading$]="isLoadingFeatureFlags$"
       ></app-feature-flag-root-section-card-table>
     </ng-template>
