WIP modals and data store updates

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -14,7 +14,7 @@
   <app-common-section-card-action-buttons
     header-right
     [showSlideToggle]="true"
-    [isEnableToggleChecked]="false"
+    [isEnableToggleChecked]="featureFlag.status === FEATURE_FLAG_STATUS.ENABLED"
     [showMenuButton]="true"
     [menuButtonItems]="menuButtonItems"
     [isSectionCardExpanded]="isSectionCardExpanded"
