--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/enable-feature-flag-modal/enable-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/enable-feature-flag-modal/enable-feature-flag-modal.component.scss
@@ -1,13 +1,21 @@
 :host ::ng-deep .enable-feature-flag-modal-container {
-  width: 100%;
-  height: 300px;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 300px;
+  align-items: space-between;
   justify-content: center;
-  align-items: center;
 
   .title {
     font-size: 18px;
     font-weight: bold;
+  }
+
+  .modal-content-text {
+    color: var(--grey-3)
+  }
+
+  .modal-content-text.info {
+    color: blue
   }
 }
