feature-flag enable

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/enable-feature-flag-modal/enable-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/enable-feature-flag-modal/enable-feature-flag-modal.component.html
@@ -1,18 +1,21 @@
 <div class="enable-feature-flag-modal-container">
-  <app-common-dialog
-    [title]="config.title"
-    [cancelBtnLabel]="config.cancelBtnLabel"
-    [primaryActionBtnLabel]="config.primaryActionBtnLabel"
-    [primaryActionBtnColor]="config.primaryActionBtnColor"
-    [primaryActionBtnDisabled$]="isLoadingUpdateFeatureFlagStatus$"
-    (primaryActionBtnClicked)="onPrimaryActionBtnClicked()"
-  >
-    <div class="modal-content">
-      <p class="modal-content-text">
-        {{ 'Are you sure you want to enable "' + featureFlagName + '"?'}}
-      </p>
-      <p class="modal-content-text info">
-        {{ '* Only the enabled include lists will be affected' }}
-    </div>
-  </app-common-dialog>
+  <ng-container *ngIf="selectedFlag$ | async as flag">
+    <app-common-dialog
+      [title]="config.title"
+      [cancelBtnLabel]="config.cancelBtnLabel"
+      [primaryActionBtnLabel]="config.primaryActionBtnLabel"
+      [primaryActionBtnColor]="config.primaryActionBtnColor"
+      [primaryActionBtnDisabled$]="isLoadingUpdateFeatureFlagStatus$"
+      (primaryActionBtnClicked)="onPrimaryActionBtnClicked({ flagId: flag.id, status: FEATURE_FLAG_STATUS.ENABLED })"
+    >
+      <div class="modal-content">
+        <p class="modal-content-text">
+          {{ 'Are you sure you want to enable "' + flag.name + '"?' }}
+        </p>
+        <p class="modal-content-text info">
+          {{ '* Only the enabled include lists will be affected' }}
+        </p>
+      </div>
+    </app-common-dialog>
+  </ng-container>
 </div>
