feature flag delete functionality

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.scss
@@ -39,12 +39,12 @@
   .footer-container {
     padding: 0 30px;
     border-top: 1px solid #ddd;
-    height: 90px;
+    height: 80px;
     display: flex;
     justify-content: flex-end;
 
     .dialog-action-btn {
-      margin-left: 20px;
+      margin: 18px 0 15px 20px;
     }
   }
 }
