--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
@@ -13,7 +13,7 @@
 
   <!-- bottom part of the dialog -->
   <section *ngIf="!hideFooter" class="footer-container">
-    <mat-dialog-actions align="end">
+    <mat-dialog-actions style="align-self: end">
       <button class="dialog-action-btn cancel-btn" mat-flat-button [mat-dialog-close]="'goodbye'">
         {{ cancelBtnLabel }}
       </button>
