Resolved issue of disabled delete button in metric page delete modal

--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
@@ -49,43 +49,45 @@
           <th mat-header-cell *matHeaderCellDef class="ft-12-700">
             {{ 'query.metric.text' | translate }}
           </th>
-          <td class="ft-12-600" mat-cell *matCellDef="let element">
-            <mat-tree [dataSource]="[element]" [treeControl]="nestedTreeControl" class="mat-nested-tree">
-              <!-- This is the tree node template for leaf nodes -->
-              <mat-tree-node *matTreeNodeDef="let node; let index = index">
-                <button mat-icon-button>
-                  <mat-icon class="leaf-node-button-icon"> fiber_manual_record</mat-icon>
-                </button>
-                {{ node.key }}
-                <mat-icon
-                  *ngIf="permissions.metrics.delete && keyEditMode"
-                  class="delete-icon"
-                  (click)="deleteNode(node)"
-                >
-                  delete_outline
-                </mat-icon>
-              </mat-tree-node>
-              <!-- This is the tree node template for expandable nodes -->
-              <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
-                <div class="mat-tree-node">
-                  <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.key">
-                    <mat-icon>
-                      {{ nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
-                    </mat-icon>
+          <td class="ft-12-600" mat-cell *matCellDef="let element; let index = index">
+            <ng-container *ngIf="element">
+              <mat-tree [dataSource]="[element]" [treeControl]="nestedTreeControl" class="mat-nested-tree">
+                <!-- This is the tree node template for leaf nodes -->
+                <mat-tree-node *matTreeNodeDef="let node">
+                  <button mat-icon-button>
+                    <mat-icon class="leaf-node-button-icon"> fiber_manual_record</mat-icon>
                   </button>
                   {{ node.key }}
                   <mat-icon
                     *ngIf="permissions.metrics.delete && keyEditMode"
                     class="delete-icon"
-                    (click)="deleteNode(node)"
-                    >delete_outline</mat-icon
+                    (click)="deleteNode(node, index)"
                   >
-                </div>
-                <div [class.mat-nested-tree-invisible]="!nestedTreeControl.isExpanded(node)" role="group">
-                  <ng-container matTreeNodeOutlet></ng-container>
-                </div>
-              </mat-nested-tree-node>
-            </mat-tree>
+                    delete_outline
+                  </mat-icon>
+                </mat-tree-node>
+                <!-- This is the tree node template for expandable nodes -->
+                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
+                  <div class="mat-tree-node">
+                    <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.key">
+                      <mat-icon>
+                        {{ nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
+                      </mat-icon>
+                    </button>
+                    {{ node.key }}
+                    <mat-icon
+                      *ngIf="permissions.metrics.delete && keyEditMode"
+                      class="delete-icon"
+                      (click)="deleteNode(node, index)"
+                      >delete_outline</mat-icon
+                    >
+                  </div>
+                  <div [class.mat-nested-tree-invisible]="!nestedTreeControl.isExpanded(node)" role="group">
+                    <ng-container matTreeNodeOutlet></ng-container>
+                  </div>
+                </mat-nested-tree-node>
+              </mat-tree>
+            </ng-container>
           </td>
         </ng-container>
 
