--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="dense-1 tags" appearance="outline" subscriptSizing="dynamic">
+<mat-form-field appearance="outline" subscriptSizing="dynamic">
   <mat-label class="ft-14-400">
     {{ 'home.new-experiment.overview.tags.placeHolder' | translate }}
   </mat-label>
