add isloading and observable to check is ff deleted before modal close

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/delete-feature-flag-modal/delete-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/delete-feature-flag-modal/delete-feature-flag-modal.component.html
@@ -5,7 +5,7 @@
       [cancelBtnLabel]="data.cancelBtnLabel"
       [primaryActionBtnLabel]="data.primaryActionBtnLabel"
       [primaryActionBtnColor]="data.primaryActionBtnColor"
-      [primaryActionBtnDisabled$]="isDeleteNotTyped$"
+      [primaryActionBtnDisabled$]="isDeleteActionBtnDisabled$"
       (primaryActionBtnClicked)="onPrimaryActionBtnClicked(flag.id)"
     >
       <div mat-dialog-content class="dialog">
