use actual flag name in breadcrumb

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-header/feature-flag-details-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-header/feature-flag-details-page-header.component.html
@@ -1,6 +1,6 @@
 <app-common-details-page-header
   rootName="feature-flags.title.text"
-  [detailsName]="flagName"
+  [detailsName]="(selectedFeatureFlag$ | async)?.name ?? ''"
   rootLink="featureflags"
 >
 </app-common-details-page-header>
