--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/update-flag-status-confirmation-modal/update-flag-status-confirmation-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/update-flag-status-confirmation-modal/update-flag-status-confirmation-modal.component.scss
@@ -1,8 +1,7 @@
-:host ::ng-deep .disable-feature-flag-modal-container {
+:host ::ng-deep .update-feature-flag-status-modal-container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 300px;
   align-items: space-between;
   justify-content: center;
 
@@ -12,10 +11,14 @@
   }
 
   .modal-content-text {
-    color: var(--grey-3)
+    color: var(--grey-3);
   }
 
   .modal-content-text.info {
+    color: blue;
+  }
+
+  .modal-content-text.warn {
     color: red;
   }
 }
