--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
@@ -39,7 +39,7 @@
         >
       </mat-form-field>
 
-      <app-common-tags-input required matInput formControlName="tags"></app-common-tags-input>
+      <app-common-tags-input formControlName="tags"></app-common-tags-input>
     </form>
   </app-common-dialog>
 </div>
