wip-working-include-and-exclude-try-refactor

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
@@ -22,5 +22,7 @@
   </app-common-section-card-action-buttons>
 
   <!-- content -->
-  <div content style="background-color: lightskyblue; height: 90px; width: 100%">content: Exclusions</div>
+  <app-feature-flag-exclusions-table content
+    class="full-width"
+  ></app-feature-flag-exclusions-table>
 </app-common-section-card>
