--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-table/feature-flag-exclusions-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-table/feature-flag-exclusions-table.component.scss
@@ -1,63 +1,4 @@
-:host ::ng-deep .flags-list-container {
+:host ::ng-deep .exclusions-table-container {
   height: 100%;
   width: 100%;
-
-  .flags-list-table-container {
-    position: relative;
-    margin-top: 8px;
-    overflow: auto;
-    width: 100%;
-
-    .spinner {
-      position: sticky;
-      top: 0;
-      z-index: 1111;
-    }
-  }
-
-  .flags-list {
-    width: 100%;
-
-    th {
-      color: var(--grey-2);
-    }
-
-    tr.mat-mdc-footer-row,
-    tr.mat-mdc-row {
-      height: 55px;
-    }
-
-    .mat-mdc-cell,
-    .mat-mdc-header-cell {
-      padding: 10px 20px;
-      width: 30%;
-      word-break: break-word;
-    }
-
-    .mat-mdc-cell:last-child,
-    .mat-mdc-header-cell:last-child {
-      text-align: right;
-    }
-
-    .mat-mdc-header-cell:last-child {
-      text-align: right;
-      padding-right: 45px;
-    }
-
-    .mat-mdc-header-cell {
-      background-color: var(--zircon);
-      margin-bottom: 10px;
-    }
-
-    .table-row-action-button {
-      color: var(--grey-6);
-    }
-  }
-
-  .no-data-row {
-    text-align: center;
-    font-size: 16px;
-    color: var(--dark-grey);
-    padding: 16px;
-  }
 }
