Using Tag input component in FF Add feature flag modal (#1650)
* Using Tag input component in FF Add feature flag modal

* Made tags as empty array in formbuilder. Removed required attribute from component

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
@@ -39,11 +39,7 @@
         >
       </mat-form-field>
 
-      <!-- TODO: create a story to create a tag input common component, don't want to copy over the logic of the mat-tag-grid from experiment-overview here -->
-      <mat-form-field appearance="outline">
-        <mat-label>Tags (optional)</mat-label>
-        <input matInput formControlName="tags" placeholder="Tags separated by commas" />
-      </mat-form-field>
+      <app-common-tags-input formControlName="tags"></app-common-tags-input>
     </form>
   </app-common-dialog>
 </div>
