--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -11,19 +11,21 @@
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let flag">{{ flag.groupId }}</td>
+        <td mat-cell *matCellDef="let segment">{{ segment.groupId || segment.userId || segment.id }}</td>
       </ng-container>
 
       <!-- Type Column -->
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
-        <td mat-cell *matCellDef="let flag">{{ flag.type }}</td>
+        <td mat-cell *matCellDef="let segment">
+          {{ segment.groupId ? segment.type + ' (group)' : segment.userId ? 'Individual' : 'Segment' }}
+        </td>
       </ng-container>
 
       <!-- Status Column -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let flag">
+        <td mat-cell *matCellDef="let segment">
           <mat-slide-toggle></mat-slide-toggle>
         </td>
       </ng-container>
@@ -31,7 +33,7 @@
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let flag">
+        <td mat-cell *matCellDef="let segment">
           <button class="table-row-action-button" mat-icon-button>
             <mat-icon>edit</mat-icon>
           </button>
