Styling aligned with figma in FF overview page

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.scss
@@ -26,4 +26,12 @@
     text-decoration: underline;
     cursor: pointer;
   }
+
+  .date {
+    color: rgba(100, 110, 123, 1);
+  }
+
+  .view-logs-link {
+    font-size: 14px;
+  }
 }
