--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
@@ -1,10 +1,16 @@
-<div class="tabbed-footer">
+<div>
   <mat-tab-group
     mat-stretch-tabs="false"
     mat-align-tabs="start"
     animationDuration="0ms"
     (selectedTabChange)="onSelectedTabChange($event)"
   >
-    <mat-tab class="footer-tab" *ngFor="let label of tabLabels" [label]="label"></mat-tab>
+    <mat-tab *ngFor="let label of tabLabels">
+      <ng-template mat-tab-label>
+        <span class="ft-18-600">
+          {{ label }}
+        </span>
+      </ng-template>
+    </mat-tab>
   </mat-tab-group>
 </div>
