--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/edit-feature-flag-modal/edit-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/edit-feature-flag-modal/edit-feature-flag-modal.component.html
@@ -1,4 +1,4 @@
-<div class="add-feature-flag-modal-container">
+<div class="edit-feature-flag-modal-container">
   <app-common-dialog
     [title]="config.title"
     [cancelBtnLabel]="config.cancelBtnLabel"
@@ -10,13 +10,13 @@
     <form [formGroup]="featureFlagForm">
       <mat-form-field appearance="outline">
         <mat-label>Name</mat-label>
-        <input matInput formControlName="name" placeholder="e.g., My feature flag" />
+        <input matInput formControlName="name" placeholder="e.g., My feature flag" [value]="flag.name"/>
         <mat-hint class="form-hint ft-10-400">{{ 'feature-flags.add-flag-modal.name-hint.text' | translate }}</mat-hint>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Key</mat-label>
-        <input matInput formControlName="key" placeholder="Key for this feature flag" />
+        <input matInput formControlName="key" placeholder="Key for this feature flag" [value]="flag.key"/>
         <mat-hint class="form-hint ft-10-400"
           >{{ 'feature-flags.add-flag-modal.key-hint.text' | translate
           }}<a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint
@@ -25,12 +25,12 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Description (optional)</mat-label>
-        <input matInput formControlName="description" placeholder="Describe your feature flag" />
+        <input matInput formControlName="description" placeholder="Describe your feature flag" [value]="flag.description"/>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>App Context</mat-label>
-        <mat-select formControlName="appContext">
+        <mat-select formControlName="appContext" [value]="flag.context[0]">
           <mat-option *ngFor="let context of appContexts$ | async" [value]="context">{{ context }}</mat-option>
         </mat-select>
         <mat-hint class="form-hint ft-10-400"
