import modal texts updated to plural for multiple file support

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.html
@@ -1,5 +1,5 @@
 <div class="import-experiment-container">
-  <span class="ft-24-700 title">{{ 'home.experiment.import-experiment.text' | translate | titlecase }}</span>
+  <span class="ft-24-700 title">{{ 'home.experiment.import-experiments.text' | translate | titlecase }}</span>
 
   <div class="import-experiment-body">
     <p class="ft-16-400">
