--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
@@ -1,5 +1,5 @@
 <div class="import-segment-container">
-  <span class="ft-24-700 title">{{ 'segments.import-segment.text' | translate | titlecase }}</span>
+  <span class="ft-24-700 title">{{ 'segments.import-segments.text' | translate | titlecase }}</span>
 
   <div class="import-segment-body">
     <p class="ft-16-400 import-message">
