--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -43,7 +43,7 @@
         *ngIf="(permissions$ | async)?.segments.create"
       >
         <mat-icon>add</mat-icon>
-        <span>{{ 'segments.import-segments.text' | translate }}</span>
+        <span>{{ 'segments.import-segment.text' | translate }}</span>
       </button>
       <button
         mat-flat-button
