--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.html
@@ -21,7 +21,7 @@
         class="dialog-action-btn primary-btn"
         mat-flat-button
         [color]="primaryActionBtnColor"
-        [disabled]="primaryActionBtnDisabled$ | async"
+        [disabled]="primaryActionBtnDisabled"
         (click)="onPrimaryActionBtnClicked()"
       >
         {{ primaryActionBtnLabel }}
