--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/edit-feature-flag-modal/edit-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/edit-feature-flag-modal/edit-feature-flag-modal.component.html
@@ -4,7 +4,7 @@
     [cancelBtnLabel]="config.cancelBtnLabel"
     [primaryActionBtnLabel]="config.primaryActionBtnLabel"
     [primaryActionBtnColor]="config.primaryActionBtnColor"
-    [primaryActionBtnDisabled$]="isLoadingUpsertFeatureFlag$"
+    [primaryActionBtnDisabled]="isLoadingUpsertFeatureFlag$ | async"
     (primaryActionBtnClicked)="onPrimaryActionBtnClicked()"
   >
     <form [formGroup]="featureFlagForm">
